--- a/beverages.html
+++ b/beverages.html
@@ -20,14 +20,15 @@ function Onoline_Fatch_User_Online_Data ()
 function Check_Network_Status ()
 {
 	display_date ();
-	Onoline_Fatch_User_Online_Data ()
-	// if (!navigator.onLine) {Create_Offline_Label ();}
-	// else if (navigator.onLine) 
-	// 	{
-	// 		Add_Menu_Gallery_Iframe ("beverages_menu");
-	// 		Load_avenu_menu_options ("beverages_options","beverages_menu_options");
-	// 		GetAvenuePrices ("prices-from-server-label", "beverages_price_endpoint");		
-	// 	}
+	// Onoline_Fatch_User_Online_Data ()
+	if (!navigator.onLine) {Create_Offline_Label ();}
+	else if (navigator.onLine) 
+		{
+			Add_Menu_Gallery_Iframe ("beverages_menu");
+			Load_avenu_menu_options ("beverages_options","beverages_menu_options");
+			GetAvenuePrices ("prices-from-server-label", "beverages_price_endpoint");		
+		
+		}
 }		
 </script>
 <body  class="main_body" onload="Check_Network_Status ()" ononline="Onoline_Fatch_User_Online_Data ()">
