--- a/luwombo.html
+++ b/luwombo.html
@@ -21,15 +21,16 @@ function Onoline_Fatch_User_Online_Data ()
 function Check_Network_Status ()
 {
 	display_date ();
-	Onoline_Fatch_User_Online_Data ()
-	// if (!navigator.onLine) {Create_Offline_Label ();}
-	// else if (navigator.onLine) 
-	// 	{
-	// 		Add_Menu_Gallery_Iframe ("luwombo_menu");
-	// 		Load_avenu_menu_options ("luwombo_options","luwombo_menu_options");
-	// 		Load_food_menu ();
-	// 		GetAvenuePrices ("prices-from-server-label", "luwombo_price_endpoint");
-	// 	}
+	// Onoline_Fatch_User_Online_Data ()
+	if (!navigator.onLine) {Create_Offline_Label ();}
+	else if (navigator.onLine) 
+		{
+			Add_Menu_Gallery_Iframe ("localdishe_menu");
+		Load_avenu_menu_options ("localdishe_options","localdishe_menu_options");
+		Load_food_menu ();
+		GetAvenuePrices ("prices-from-server-label", "localdishe_price_endpoint");
+		
+		}
 }		
 </script>
 <body  class="main_body" onload="Check_Network_Status ()" ononline="Onoline_Fatch_User_Online_Data ()">
