New Esther client Server Uploads

--- a/salads.html
+++ b/salads.html
@@ -93,7 +93,8 @@ function closeNavi (){document.getElementById("Navigetion").style.width = "0"}
 			<div class="w3-container first-pop-up-window">
 
 				<center><br>
-					<form action="http://109.74.192.210:6060/salads_customer_order" method="POST" id="customers-order-form"  class="order-form">
+					<!-- <form action="http://109.74.192.210:6060/salads_customer_order" method="POST" id="customers-order-form"  class="order-form"> -->
+					<form action="http://109.74.192:6060/salads_customer_order" method="POST" id="customers-order-form"  class="order-form">
 						<br>
 						<label class="order-form-lables fontstyles" >Name</label><br>
 						<input id="name" class="form_input" type="text" placeholder="Your Name" name="name" autocomplete="off" required><br>
